webapp/frontend/src/app/modules/detail/detail.component.scss
@import 'treo';

detail {
}

// -----------------------------------------------------------------------------------------------------
// @ Theming
// -----------------------------------------------------------------------------------------------------
@include treo-theme {

    $background: map-get($theme, background);
    $foreground: map-get($theme, foreground);
    $primary: map-get($theme, primary);
    $accent: map-get($theme, accent);
    $warn: map-get($theme, warn);
    $is-dark: map-get($theme, is-dark);

    detail {
    }


}

//table {
//    width: 100%;
//}

$primary: map-get($theme, primary);
$is-dark: map-get($theme, is-dark);
tr.attribute-detail-row {
    height: 0;
}

//tr.attribute-row:not(.attribute-expanded-row):hover {
//    @if ($is-dark) {
//        background: rgba(0, 0, 0, 0.05);
//    } @else {
//        background: map-get($primary, 50);
//    }
//}

tr.attribute-row:not(.attribute-expanded-row):active {
    background: #efefef;
}

.attribute-row td {
    border-bottom-width: 0;
}

.attribute-detail {
    overflow: hidden;
    display: flex;
}

.muted-icon {
    // Giving vertical-align does not solve alignment for all optical font sizes.
    // Actually aligning by baseline shows a more decent alignment on default zoom on Firefox w/ Inter
    // Commenting this out for now. Need to figure out a better way.
    // vertical-align: middle;
}

